Stable Version
Changed a lot of small detailed. First usable version of the app.